--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -14,7 +14,15 @@
     <div class="collapse navbar-collapse">
       <ul class="navbar-nav me-auto">
         <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="/settings">Settings</a></li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="resultDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Settings
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="resultDropdown">
+            <li><a class="dropdown-item" href="/settings">Config</a></li>
+            <li><a class="dropdown-item" href="/settings/import-export">Import/Export</a></li>
+          </ul>
+        </li>
         <li class="nav-item"><a class="nav-link" href="/repos">Repos</a></li>
         <li class="nav-item"><a class="nav-link" href="/scan">Scan</a></li>
         <li class="nav-item dropdown">
