--- a/app/templates/scan.html
+++ b/app/templates/scan.html
@@ -9,7 +9,7 @@
   <select id="source_id" class="form-select" onchange="loadReposForScan()">
     <option value="">-- Select Git Source --</option>
     {% for src in sources %}
-      <option value="{{ src.id }}">{{ src.platform }} - {{ src.base_url }}</option>
+      <option value="{{ src.id }}">{{ src.label_name }}</option>
     {% endfor %}
   </select>
 </div>
