--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -150,7 +150,7 @@
       li.className = "list-group-item d-flex justify-content-between align-items-center";
       li.innerHTML = `
         <div>
-          <strong>${cfg.platform}</strong> | <strong>[${cfg.label_name || "Unnamed"}]</strong><br>
+          <strong>${cfg.platform}</strong> | <strong>[${cfg.label_name || "Unnamed"}] | Webhook_ID:<strong>${cfg.id}</strong><br>
           <small>${cfg.base_url}</small>
         </div>
         <button class="btn btn-sm btn-danger" onclick="deleteConfig(${cfg.id})">Delete</button>
