--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -34,6 +34,7 @@
             <li><a class="dropdown-item" href="/result/trivy">Trivy</a></li>
           </ul>
         </li>
+        <li class="nav-item"><a class="nav-link" href="/reveal/trufflehog">Secret-Viewer</a></li>
       </ul>
     </div>
     <button class="btn btn-sm btn-outline-light" onclick="toggleTheme()" id="themeToggle">🌙 Dark Mode</button>
