--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -32,6 +32,7 @@
           <ul class="dropdown-menu" aria-labelledby="resultDropdown">
             <li><a class="dropdown-item" href="/result/trufflehog">TruffleHog</a></li>
             <li><a class="dropdown-item" href="/result/trivy">Trivy</a></li>
+            <li><a class="dropdown-item" href="/result/gitleaks">Gitleaks</a></li>
           </ul>
         </li>
         <li class="nav-item"><a class="nav-link" href="/reveal/trufflehog">Secret-Viewer</a></li>
